# ArduinoHeadTracker

./: .gitmodules  LICENSE.md  README.md
mpu6050-tracker-cpp/: .gitmodules  CMakeLists.txt  platformio.ini
mpu6050-tracker-cpp/src/: main.cpp
mpu6050_pc/: go.mod
mpu6050_pc/cmd/: main.go
mpu6050_rs/: Cargo.toml
mpu6050_rs/src/: kalman_filter.rs  main.rs
