[package]
name = "mpu6050_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serde_json = "1.0.91"
nalgebra = "0.32.1"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
